--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,104 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Roboto, system-ui, Arial, sans-serif;
+}
+
+a {
+    text-decoration: none;
+        color: #F9FAF8;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+}
+.hero-container {
+    height: 100vh;
+    background-color: #1F2937;
+    color: #F9FAF8;
+}
+.nav-main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 200px;
+}
+
+.header-logo {
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.header-links {
+    display: flex;
+    list-style-type: none;
+    gap: 24px;
+}
+
+.hero-title {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+.hero {
+    display: flex;
+    padding: 100px 200px;
+}
+
+.left {
+    padding: 8px 138px 8px 0;
+}
+
+.left p {
+    margin: 12px 0;
+    font-size: 18px;
+}
+
+button {
+    color: #F9FAF8;
+    background-color: #3882F6;
+    border: none;
+    padding: 8px 24px;
+    border-radius: 8px;
+    transition: background-color 0.2s ease;
+}
+
+button:hover {
+    background-color: hsl(217, 91%, 49%);
+}
+
+button:active {
+    background-color: hsl(217, 91%, 69%);
+}
+
+.random-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.random-title {
+    padding: 36px;
+    color: #1F2937;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.random-cards {
+    display: flex;
+    padding: 0 120px 48px 120px;
+    gap: 64px;
+    text-align: center;
+}
+.card {
+    max-width: 150px;
+}
+.card img {
+    border: 4px solid #3882F6;
+    border-radius: 8px;
 }
