--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,25 @@ button:active {
     border: 4px solid #3882F6;
     border-radius: 8px;
 }
+.quotes-container {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 300;
+    padding: 148px 350px;
+    font-style: italic;
+    margin: 0;
+}
+.quote {
+    margin-left: 64px;
+}
+.thor {
+    font-weight: bold;
+    font-size: 26px;
+    font-style: normal;
+    margin: 0 48px 0 auto;
+}
