--- a/styles.css
+++ b/styles.css
@@ -95,13 +95,16 @@ button:active {
     gap: 64px;
     text-align: center;
 }
+
 .card {
     max-width: 150px;
 }
+
 .card img {
     border: 4px solid #3882F6;
     border-radius: 8px;
 }
+
 .quotes-container {
     display: flex;
     flex-direction: column;
@@ -115,12 +118,57 @@ button:active {
     font-style: italic;
     margin: 0;
 }
+
 .quote {
     margin-left: 64px;
 }
+
 .thor {
     font-weight: bold;
     font-size: 26px;
     font-style: normal;
     margin: 0 48px 0 auto;
+}
+
+.call-to-action-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 148px 220px;
+}
+
+.CTA-container {
+    color: white;
+    background-color: #3882F6;
+    padding: 48px 72px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    gap: 8px;
+    width: 90%;
+}
+
+.CTA-text {
+    margin: 22px 64px;
+}
+
+.CTA-text p:nth-child(1) {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.sign-up {
+    width: 120px;
+    font-weight: bold;
+    border: 2px solid white;
+    margin: 24px 44px;
+}
+
+.footer-container {
+    color: #E5E7EB;
+    background-color: #1F2937;
+    padding: 32px 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
